--- a/crdb-k3s-eastus-backup-eastus.yaml
+++ b/crdb-k3s-eastus-backup-eastus.yaml
@@ -20,18 +20,17 @@ data:
         loop
         reload
         loadbalance
-    }
-  }
-  k3s-cl1.svc.cluster.local:53 {       # <---- Modify
-       log
-       errors
-       ready
-       cache 10
-       forward . 172.18.0.4 {      # <---- Modify
-       }
-
+      }
+      westus.svc.cluster.local:53 {       # <---- Modify
+          log
+          errors
+          ready
+          cache 10
+          forward . 10.2.1.4:31450 {      # <---- Modify
+          }
+      }
   NodeHosts: |
-    172.18.0.5 k3s-cl2-server0
+    10.1.1.4 crdb-eastus-node1
 kind: ConfigMap
 metadata:
   annotations:
@@ -45,10 +44,7 @@ metadata:
     objectset.rio.cattle.io/owner-gvk: k3s.cattle.io/v1, Kind=Addon
     objectset.rio.cattle.io/owner-name: coredns
     objectset.rio.cattle.io/owner-namespace: kube-system
-  creationTimestamp: "2021-11-01T22:19:18Z"
   labels:
     objectset.rio.cattle.io/hash: bce283298811743a0386ab510f2f67ef74240c57
   name: coredns
   namespace: kube-system
-  resourceVersion: "324"
-  uid: f47fc7bf-23d7-4dad-9813-f16032ec58d4
