--- a/crdb-k3s-eastus-backup.yaml
+++ b/crdb-k3s-eastus-backup.yaml
@@ -20,16 +20,9 @@ data:
         loop
         reload
         loadbalance
-   }
-   k3s-cl2.svc.cluster.local:53 {       # <---- Modify
-       log
-       errors
-       ready
-       cache 10
-       forward . 172.18.0.5 {      # <---- Modify
-       }
+    }
   NodeHosts: |
-    172.18.0.4 k3s-cl1-server0
+    10.1.1.4 crdb-eastus-node1
 kind: ConfigMap
 metadata:
   annotations:
@@ -43,10 +36,10 @@ metadata:
     objectset.rio.cattle.io/owner-gvk: k3s.cattle.io/v1, Kind=Addon
     objectset.rio.cattle.io/owner-name: coredns
     objectset.rio.cattle.io/owner-namespace: kube-system
-  creationTimestamp: "2021-11-01T22:16:11Z"
+  creationTimestamp: "2021-11-10T14:24:40Z"
   labels:
     objectset.rio.cattle.io/hash: bce283298811743a0386ab510f2f67ef74240c57
   name: coredns
   namespace: kube-system
-  resourceVersion: "332"
-  uid: c706353c-b996-47dc-8be6-6853aad65d5e
+  resourceVersion: "314"
+  uid: 4a411fc8-3cde-4010-92a8-e1bcacd828d1
