--- a/multiregion/cockroachdb-statefulset-secure.yaml
+++ b/multiregion/cockroachdb-statefulset-secure.yaml
@@ -75,6 +75,7 @@ metadata:
   labels:
     app: cockroachdb
 spec:
+  type: NodePort
   ports:
   # The main port, served by gRPC, serves Postgres-flavor SQL, internode
   # traffic and the cli.
@@ -84,6 +85,7 @@ spec:
   # The secondary port serves the UI as well as health and debug endpoints.
   - port: 8080
     targetPort: 8080
+    nodePort: 31007
     name: http
   selector:
     app: cockroachdb
